--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "cytoscape": "^3.26.0",
     "react": "^18.2.0",
     "react-cytoscapejs": "^2.0.0",
