--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
     "cytoscape": "^3.26.0",
     "cytoscape-cose-bilkent": "^4.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
