--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cytoscape": "^3.26.0",
     "cytoscape-cose-bilkent": "^4.1.0",
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-cytoscapejs": "^2.0.0",
