--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.8.0",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-joyride": "^2.6.1",
     "react-router-dom": "^6.16.0"
   },
