--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-joyride": "^2.6.1",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-tooltip": "^5.25.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
