--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-joyride": "^2.6.1",
+    "react-resizable-panels": "^2.0.16",
     "react-router-dom": "^6.16.0",
     "react-tooltip": "^5.25.1"
   },
