--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-joyride": "^2.6.1",
     "react-resizable-panels": "^2.0.16",
     "react-router-dom": "^6.16.0",
+    "react-tabs": "^6.0.2",
     "react-tooltip": "^5.25.1"
   },
   "devDependencies": {
