--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,6 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: cd project-docs
+      - run: cd /project-docs
       - run: pip install mkdocs-material 
       - run: mkdocs gh-deploy --force
