--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^3.0.0",
     "jest": "^29.7.0",
     "neo4j-driver": "^5.12.0",
     "nodemon": "^3.0.1",
