--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,16 @@
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "npm"
+    directory: "/client" 
     schedule:
       interval: "daily"
+  - package-ecosystem: "npm"
+    directory: "/server" 
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pip"
+    directory: "/python_api" 
+    schedule:
+      interval: "daily"
+
