--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,11 @@
     "cytoscape-cola": "^2.5.1",
     "cytoscape-cose-bilkent": "^4.1.0",
     "file-saver": "^2.0.5",
+    "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
+    "react-icons": "^5.3.0",
     "react-joyride": "^2.6.1",
     "react-resizable-panels": "^2.0.16",
     "react-router-dom": "^6.16.0",
@@ -35,6 +36,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.5.2"
+    "vite": "^5.4.6"
   }
 }
