--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,28 +8,12 @@ updates:
   - package-ecosystem: "npm"
     directory: "/client" 
     schedule:
-      interval: "daily"
-    ignore:
-      - dependency-type: "all"
-    allow:
-      - dependency-type: "security"
-
+      interval: "weekly"
   - package-ecosystem: "npm"
     directory: "/server" 
     schedule:
-      interval: "daily"
-    ignore:
-      - dependency-type: "all"
-    allow:
-      - dependency-type: "security"
-
+      interval: "weekly"
   - package-ecosystem: "pip"
     directory: "/python_api" 
     schedule:
-      interval: "daily"
-    ignore:
-      - dependency-type: "all"
-    allow:
-      - dependency-type: "security"
-
-
+      interval: "weekly"
