--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,10 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-rate-limit": "^7.4.1",
     "http-proxy-middleware": "^3.0.2",
     "jest": "^29.7.0",
     "neo4j-driver": "^5.24.1",
